<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CoinFlipHistoryActivity">

    <LinearLayout
        android:id="@+id/layoutColumnLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dateTimeLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/date_time"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/pickerLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="40"
            android:gravity="center"
            android:text="@string/picker"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="15"
            android:gravity="center"
            android:text="@string/coin_flip_result"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/pickerWinLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="15"
            android:gravity="center"
            android:text="@string/picker_win"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewCoinFlip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutColumnLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>