<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddChildActivity">


    <TextView
        android:id="@+id/team_info"
        android:layout_width="137dp"
        android:layout_height="182dp"
        android:layout_marginTop="4dp"
        android:text="@string/team_info"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <TextView
        android:id="@+id/resources"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:text="@string/resources"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/icon_link"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/icon_link"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/other_link"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/other_link"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/bg_link"
        android:layout_width="149dp"
        android:layout_height="27dp"
        android:layout_marginTop="96dp"
        android:text="@string/bg_link"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>