<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/countDownText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/times_up"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startPauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countDownText"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@id/countDownText"
        app:layout_constraintTop_toBottomOf="@id/countDownText" />


    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countDownText"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@id/countDownText"
        app:layout_constraintTop_toBottomOf="@id/countDownText" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/timer_progress_pie"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="306dp"
        android:minHeight="306dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDownText"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/textViewSelectTimerLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/select_length_for_timer"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimerLength"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/startPauseBtn" />

    <RadioGroup
        android:id="@+id/radioGroupTimerLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSelectTimerLength"
        app:layout_constraintBottom_toTopOf="@+id/textViewCustomizeTimerLength"
        app:layout_constraintStart_toStartOf="@id/textViewSelectTimerLength"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectTimerLength" />


    <TextView
        android:id="@+id/textViewCustomizeTimerLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/customize_length"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/inputTextTimerLength"
        app:layout_constraintStart_toStartOf="@id/textViewSelectTimerLength"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTimerLength" />

    <EditText
        android:id="@+id/inputTextTimerLength"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewUserInputSyntax"
        app:layout_constraintStart_toStartOf="@id/textViewCustomizeTimerLength"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustomizeTimerLength" />

    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/inputTextTimerLength"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/inputTextTimerLength"
        android:text="@string/set"
        app:layout_constraintStart_toEndOf="@id/inputTextTimerLength"
        app:layout_constraintTop_toBottomOf="@id/textViewCustomizeTimerLength" />

    <TextView
        android:id="@+id/textViewUserInputSyntax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputTextTimerLength"
        android:layout_centerVertical="true"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/syntax_for_timer_length_input"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/inputTextTimerLength"
        app:layout_constraintTop_toBottomOf="@+id/inputTextTimerLength" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/speedStatement"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toEndOf="@+id/textViewUserInputSyntax"
        app:layout_constraintTop_toTopOf="@+id/textViewUserInputSyntax"
        app:layout_constraintVertical_bias="0.185" />

</androidx.constraintlayout.widget.ConstraintLayout>

